# bubble-services

./: .gitignore  Cargo.toml  README.md
.github/workflows/: docs.yml  general.yml
.sqlx/: query-04ceaf82cdb41e97abfdd1a58c9b9d2874ecb02ca0d72868b445ae0984a045e7.json  query-9f88b0bc0d98e3f902847e2ccf0423415876f58c204edb4101e30fdd6d8bd87f.json
configuration/: base.toml
migrations/: 20240719094749_create_call_requests_table.sql
scripts/: init_db.sh  init_redis.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/domain/: call_request.rs
src/routes/: call_request.rs  healthcheck.rs  home.rs  login.rs  mod.rs
templates/: call_request.html  common.html  index.html  login.html
tests/: helpers.rs
tests/routes/: call_request.rs  healthcheck.rs  mod.rs
